@@ -1,4 +1,5 @@
 #SRC: JCON
+#OPT: -fe
 
 # test large integer calculations
 
@@ -16,6 +17,7 @@ procedure main()
    write(); every power(11213, 2 to 16)
    write(); every impower(3, 60 to 75)
    write(); every minpower(!primes)
+   write(); every bigexp(3 | 6 | -7 | 3 ^ 41 | 6 ^ 25 | -7 ^ 23)
    write(); every tmul(2 | 3 | 5 | 7 | 10 | 17 | 51 | -3 | -11 | -43)
    write(); every tmul(3 ^ (2 to 50))
    write(); every conv(787 ^ (1 to 24) | -5781 ^ (1 to 18))
@@ -89,6 +91,16 @@ procedure minpower(b)			# find minimum power that is a large int
    local e
    2 ^ 63 <= b ^ (e := seq(1))
    write(right(b,2), " ^", right(e, 3), " =", right(b ^ e, 22))
+end
+
+procedure bigexp(v)
+   local x
+   &error := -1
+   write("       v = ", v)
+   every x := (-2 to 2) | (-3 to 3) / 2.0 do 
+      write(right(x, 4), " ^ v = ", (x ^ v) | ("error " || &errornumber))
+   &error := 0
+   return
 end
 
 procedure mersenne(m)			# Mersenne numbers
