@@ -100,6 +100,85 @@ P(107) = 13164036458569648337239753460458722910223472318386943117783728128
 89 ^ 10 =  31181719929966183601
 97 ^ 10 =  73742412689492826049
 
+       v = 3
+  -2 ^ v = -8
+  -1 ^ v = -1
+   0 ^ v = 0
+   1 ^ v = 1
+   2 ^ v = 8
+-1.5 ^ v = -3.375
+-1.0 ^ v = -1.0
+-0.5 ^ v = -0.125
+ 0.0 ^ v = 0.0
+ 0.5 ^ v = 0.125
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = 3.375
+       v = 6
+  -2 ^ v = 64
+  -1 ^ v = 1
+   0 ^ v = 0
+   1 ^ v = 1
+   2 ^ v = 64
+-1.5 ^ v = 11.390625
+-1.0 ^ v = 1.0
+-0.5 ^ v = 0.015625
+ 0.0 ^ v = 0.0
+ 0.5 ^ v = 0.015625
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = 11.390625
+       v = -7
+  -2 ^ v = 0
+  -1 ^ v = -1
+   0 ^ v = error 204
+   1 ^ v = 1
+   2 ^ v = 0
+-1.5 ^ v = -0.05852766346593506
+-1.0 ^ v = -1.0
+-0.5 ^ v = -128.0
+ 0.0 ^ v = error 204
+ 0.5 ^ v = 128.0
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = 0.05852766346593506
+       v = 36472996377170786403
+  -2 ^ v = error 203
+  -1 ^ v = -1
+   0 ^ v = 0
+   1 ^ v = 1
+   2 ^ v = error 203
+-1.5 ^ v = error 204
+-1.0 ^ v = -1.0
+-0.5 ^ v = 0.0
+ 0.0 ^ v = 0.0
+ 0.5 ^ v = 0.0
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = error 204
+       v = 28430288029929701376
+  -2 ^ v = error 203
+  -1 ^ v = 1
+   0 ^ v = 0
+   1 ^ v = 1
+   2 ^ v = error 203
+-1.5 ^ v = error 204
+-1.0 ^ v = 1.0
+-0.5 ^ v = 0.0
+ 0.0 ^ v = 0.0
+ 0.5 ^ v = 0.0
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = error 204
+       v = -27368747340080916343
+  -2 ^ v = 0
+  -1 ^ v = -1
+   0 ^ v = error 201
+   1 ^ v = 1
+   2 ^ v = 0
+-1.5 ^ v = 0.0
+-1.0 ^ v = -1.0
+-0.5 ^ v = error 204
+ 0.0 ^ v = error 204
+ 0.5 ^ v = error 204
+ 1.0 ^ v = 1.0
+ 1.5 ^ v = 0.0
+
 2 ^ 84 = 19342813113834066795298816
 3 ^ 53 = 19383245667680019896796723
 5 ^ 36 = 14551915228366851806640625
